final web for my self(do many thing in this commit)

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/picture/avatar.png" />
+    <link rel="icon" type="image/png" href="/pictures/avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>qián|website</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
